<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>hcw-framework-pom</artifactId>
    <groupId>com.hcw.framework</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

    <artifactId>hcw-learning</artifactId>
  <version>1.0.0.SNAPSHOT</version>

  <name>hcw-learning</name>

  <properties>
		<maven.compiler.source>14</maven.compiler.source>
    	<maven.compiler.target>14</maven.compiler.target>
  </properties>
  
  <dependencies>
    <dependency>
        <groupId>com.bladejava</groupId>
        <artifactId>blade-mvc</artifactId>
        <version>2.0.15.RELEASE</version>
    </dependency>
      <dependency>
          <groupId>org.openjdk.jol</groupId>
          <artifactId>jol-core</artifactId>
          <version>0.9</version>
      </dependency>
      <dependency>
          <groupId>org.apache.lucene</groupId>
          <artifactId>lucene-core</artifactId>
          <version>4.0.0</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>5.6.2</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>3.3.3</version>
          <scope>test</scope>
      </dependency>


      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-junit-jupiter</artifactId>
          <version>3.3.3</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>com.alibaba</groupId>
          <artifactId>fastjson</artifactId>
          <version>1.2.58</version>
      </dependency>
  </dependencies>

   <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <release>14</release>
            <compilerArgs>--enable-preview</compilerArgs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.0</version>
          <configuration>
              <archive>
                  <!--自动添加META-INF/MANIFEST.MF -->
                  <manifest>
                      <addClasspath>true</addClasspath>
                  </manifest>
                  <manifestEntries>
                      <Premain-Class>com.hcw.framework.learn.agent.PreMainTraceAgent</Premain-Class>
                      <Agent-Class>com.hcw.framework.learn.agent.PreMainTraceAgent</Agent-Class>
                      <Can-Redefine-Classes>true</Can-Redefine-Classes>
                      <Can-Retransform-Classes>true</Can-Retransform-Classes>
                  </manifestEntries>
              </archive>
          </configuration>
      </plugin>
      </plugins>
    </pluginManagement>

   </build>

</project>
